Revision history for Perl extension Term-ProgressBar

2.16 2014-09-09 17:00:00
   - Cygwin width issue  RT #8344 (LukeGoodsell)

2.15 2014-04-13 23:23:23
    - Add Term::ProgressBar::IO (DON)

2.14 2013-07-21 13:34:52
    - Document the term_width argument to the constructor (OVID)
    - Add a "silent" option to the constructor (OVID)

2.13 2012-05-18 06:24:42
	- remove unused and invalid SIGNATURE file
	- move content of BUGS to Changes
	- Remove the INSTALL and configure files,
	  people should use the standard CPAN installation tools
    - Add standard prerequisites to Makefile.PL
    
2.12 2012-05-16 12:47:16
	- use strict; use warnings; in examples
	- remove bareword from POD (JBAKER)
	- make lbrack and rbrack official.

2.11 2012-02-17 12:31:04
	- skip the signature verification

2.10 2011-12-21 11:18:26
	- remove Build.PL (keep the Makefile.PL only)
	- Replace home-made testing tools with CPAN-ish tools
	- Require Capture::Tiny for testing
	- New co-maintainer: Gabor Szabo

2.09 2005-03-13 21:17 GMT
	- Fix for incorrect formatting of 'D...' time done at end

2.08 2005-03-12 11:47 GMT
	- Add remove option
	- Add patch to account for weird terminal sizing under Windoze
	  (thanks to Andrew Peters for the patch).

2.07 2005-03-06 13:31 GMT
	- Correct handling of non-term mode to output stats but no PB
	- Print time taken to complete in ETA mode when Done
	- Add use of 'name' to example in 'new' doc
	- Add doc of use of minor characters to description
	- Add doc. for name value to new

2.06 2004-03-14 10:46 GMT
	- Add patch to cope when terminal size cannot be detected or is
	  too small.
	  Thanks to Ed Avis (<ed at membled dot com>) for the patch.
	- Add patch to test to avoid failure on windoze due to unlinking open
	  files
	- Add patch to cope when Term::ReadKey fails to initialize for some
	  reason.
	  Thanks to Scott Cain (<cain at cshl dot org>) for the patch.
	- Add patch to suppress unnecessary terminal updates