@@ -1,8 +1,10 @@
+package Term::ProgressBar::IO;
+use strict;
+use warnings;
+
 #  This program is free software; you can redistribute it and/or
 #  modify it under the same terms as Perl itself.
 # Copyright 2014 by Don Armstrong <don@donarmstrong.com>.
-
-package Term::ProgressBar::IO;
 
 =head1 NAME
 
@@ -31,18 +33,11 @@ None known.
 
 =cut
 
-use warnings;
-use strict;
-use vars qw($VERSION $DEBUG);
-
 use parent qw(Term::ProgressBar);
 use Carp;
 use Fcntl qw(:seek);
 
-BEGIN{
-     $VERSION = q(2.16);
-     $DEBUG = 0 unless defined $DEBUG;
-}
+our $VERSION = '2.16';
 
 =head1 METHODS
 
